--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,10 +7,15 @@ spring:
     password: 123456
 mybatis-plus:
   mapper-locations: classpath*:/mapper/**Mapper.xml
-  spring:
-    freemarker:
-      cache: false
 
-
+freemarker:
+    template-loader-path: classpath:/templates/
+    cache: false
+    charset: UTF-8
+    check-template-location: true
+    content-type: text/html; charset=utf-8
+    expose-request-attributes: true
+    expose-session-attributes: true
+    request-context-attribute: request
 
 
